--- a/index.css
+++ b/index.css
@@ -2,3 +2,15 @@
     margin: 0;
     padding: 0;
 }
+h1 {
+    color: red;
+}
+h2 {
+    color: blue;
+}
+h3 {
+    color: pink;
+}
+h4 {
+    color: deeppink;
+}
